--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,7 +19,7 @@
                   <span class="tag">
                     <img src="./images/add-friend.png" class="_img_tag" alt="App" />
                     <p>
-                      jonhush@gmail.com  
+                      omizach@gmail.com  
                     </p>
                   </span>
                 </div>
